thread terminates nicely, selected nodes still not handled quickly enough?

--- a/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
+++ b/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -84,7 +84,7 @@
     "    msgToKernel = Unicode(\"{}\").tag(sync=True)\n",
     "    status = \"initial status message\\n\"\n",
     "    selectedNodes = [];\n",
-    "    incomingMessageArrived = False;\n",
+    "    incomingMessageArrivedAndParsed = False;\n",
     "    globalStatus = \"blank\"\n",
     "\n",
     "    #------------------------------------------------------------------------------\n",
@@ -97,11 +97,13 @@
     "       def run(self):\n",
     "          maxLoops = 5\n",
     "          counter = 0\n",
-    "          while(not self.owner.incomingMessageArrived and counter < maxLoops):\n",
+    "          while(not self.owner.incomingMessageArrivedAndParsed and counter < maxLoops):\n",
     "             counter += 1\n",
     "             print(\"thread, no message yet, sleeping, loop %d\" % counter)\n",
     "             time.sleep(1.0)\n",
-    "          print(\"           message arrived\")\n",
+    "          self.owner.status += \"MyThread ending loop\\n\"\n",
+    "          self.owner.status += \"thread owner's selectedNodes: %s\\n\" % self.owner.selectedNodes;\n",
+    "            \n",
     "    #------------------------------------------------------------------------------\n",
     "\n",
     "    def testThread(self):\n",
@@ -125,7 +127,7 @@
     "       for i in range(1, 5):\n",
     "         self.status += \" *** sleeping in getBrowserResponse loop, %d\\n\" % i\n",
     "         time.sleep(0.5)\n",
-    "         if(self.incomingMessageArrived):\n",
+    "         if(self.incomingMessageArrivedAndParsed):\n",
     "            self.status += \" *** getBrowserResponse learns that message has arrived\\n\"\n",
     "            break;\n",
     "       self.status += \" *** thread ending, browserResponse: %d\\n\" % browserResponse;\n",
@@ -136,7 +138,7 @@
     "    def getSelectedNodes(self):\n",
     "      #self.selectedNodes = [];\n",
     "      self.incomingMessageArrived = False;\n",
-    "      self.status += \"entering requestSelectedNodes\\n\";\n",
+    "      self.status += \"entering getSelectedNodes\\n\";\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"cleanSlate\", \"status\": \"request\", \"callback\": \"\", \"payload\":\"\"});\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"getSelectedNodes\", \"status\": \"request\",\n",
     "                                       \"callback\": \"\", \"payload\": \"\"});\n",
@@ -145,17 +147,8 @@
     "      print(\"getSelectedNodes about to start observingThread\")\n",
     "      observingThread.start()\n",
     "      #observingThread.join()\n",
-    "      print(\"getSelectedNodes, observingThread now complete\")\n",
-    "      # while(self.incomingMessageArrived == False):\n",
-    "      #  self.status += \"about to sleep, waiting for incoming message\\n\";\n",
-    "      #  time.sleep(0.1)\n",
-    "      #self.status += \"requestSelectedNodes fell through sleepy loop\\n\";\n",
-    "      #self.status += self.msgToKernel\n",
-    "      Thread(target=self.getBrowserResponse).start()\n",
-    "      #for i in range(1,10):\n",
-    "      #  print(\"getSelectedNodes waiting, %d: %s\" % (i, self.selectedNodes))\n",
-    "      #  time.sleep(1);\n",
-    "      #self.status += \"\\nconcluding requestSelectedNodes\\n\"\n",
+    "      print(\"getSelectedNodes, observingThread now complete: %s\" %  self.selectedNodes)\n",
+    "      return(self.status)\n",
     "        \n",
     "    def oldGetSelectedNodes(self):\n",
     "      self.status += \"entering getSelectedNodes, current content is %s\\n\" % self.selectedNodes\n",
@@ -168,7 +161,6 @@
     "    def clearSelection(self):\n",
     "      self. msgFromKernel = json.dumps({\"cmd\": \"clearSelection\", \"status\": \"request\",\n",
     "                                        \"callback\": \"\", \"payload\": \"\"});\n",
-    "\n",
     "        \n",
     "    @observe('msgToKernel')\n",
     "    def msg_arrived(self, change):\n",
@@ -198,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -683,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -695,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -706,8 +698,9 @@
      "text": [
       "getSelectedNodes about to start observingThread\n",
       "thread, no message yet, sleeping, loop 1\n",
-      "getSelectedNodes, observingThread now complete\n",
-      "None\n"
+      "getSelectedNodes, observingThread now complete: []\n",
+      "entering getSelectedNodes\n",
+      "\n"
      ]
     }
    ],
@@ -718,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -727,21 +720,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "entering requestSelectedNodes\n",
-      " *** entered getBrowserResponse\n",
-      " *** sleeping in getBrowserResponse loop, 1\n",
+      "entering getSelectedNodes\n",
       "---- python - msg arrived\n",
       "len of tmp: 80\n",
       "type of tmp: <class 'str'>\n",
-      "{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"STXBP3\"]}\n",
+      "{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"LPCAT2\"]}\n",
       "entering dispatch\n",
-      "dispatch this msg: {'status': 'reply', 'payload': ['STXBP3'], 'cmd': 'storeSelectedNodes', 'callback': ''}\n",
+      "dispatch this msg: {'status': 'reply', 'payload': ['LPCAT2'], 'cmd': 'storeSelectedNodes', 'callback': ''}\n",
       "msg.cmd: storeSelectedNodes\n",
-      "storing selected nodes to self.selectedNodes ['STXBP3']\n",
-      " *** getBrowserResponse learns that message has arrived\n",
-      " *** thread ending, browserResponse: 0\n",
-      " *** selected: ['STXBP3']\n",
-      "\n",
+      "storing selected nodes to self.selectedNodes ['LPCAT2']\n",
+      "MyThread ending loop\n",
+      "thread owner's selectedNodes: ['LPCAT2']\n",
       "\n"
      ]
     }
@@ -764,11 +753,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['MAG']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cy.selectedNodes"
    ]
