main thread getSelectedNodes returns before thread is done

--- a/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
+++ b/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -54,14 +54,14 @@
     "    msgToKernel = Unicode(\"{}\").tag(sync=True)\n",
     "    status = \"initial status message\\n\"\n",
     "    selectedNodes = [];\n",
-    "    incomingMessageArrived = False;\n",
+    "    incomingMessageArrivedAndParsed = False;\n",
     "    globalStatus = \"blank\"\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -97,12 +97,12 @@
     "       def run(self):\n",
     "          maxLoops = 5\n",
     "          counter = 0\n",
-    "          while(not self.owner.incomingMessageArrivedAndParsed and counter < maxLoops):\n",
+    "          while((self.owner.incomingMessageArrivedAndParsed == False) and (counter < maxLoops)):\n",
     "             counter += 1\n",
     "             print(\"thread, no message yet, sleeping, loop %d\" % counter)\n",
     "             time.sleep(1.0)\n",
-    "          self.owner.status += \"MyThread ending loop\\n\"\n",
     "          self.owner.status += \"thread owner's selectedNodes: %s\\n\" % self.owner.selectedNodes;\n",
+    "          self.owner.status += \"MyThread ending loop\\n\";\n",
     "            \n",
     "    #------------------------------------------------------------------------------\n",
     "\n",
@@ -121,23 +121,9 @@
     "      self.status += \"entering fit (%d)\\n\" % margin\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"fit\", \"status\": \"request\",\n",
     "                                       \"callback\": \"\", \"payload\": margin});\n",
-    "    def getBrowserResponse(self):\n",
-    "       self.status += \" *** entered getBrowserResponse\\n\"\n",
-    "       browserResponse = 0;\n",
-    "       for i in range(1, 5):\n",
-    "         self.status += \" *** sleeping in getBrowserResponse loop, %d\\n\" % i\n",
-    "         time.sleep(0.5)\n",
-    "         if(self.incomingMessageArrivedAndParsed):\n",
-    "            self.status += \" *** getBrowserResponse learns that message has arrived\\n\"\n",
-    "            break;\n",
-    "       self.status += \" *** thread ending, browserResponse: %d\\n\" % browserResponse;\n",
-    "       self.status += \" *** selected: %s\\n\" % self.selectedNodes;\n",
-    "       self.status += \"\\n\"\n",
-    "       return(self.selectedNodes);\n",
-    "\n",
     "    def getSelectedNodes(self):\n",
     "      #self.selectedNodes = [];\n",
-    "      self.incomingMessageArrived = False;\n",
+    "      self.incomingMessageArrivedAndParsed = False;\n",
     "      self.status += \"entering getSelectedNodes\\n\";\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"cleanSlate\", \"status\": \"request\", \"callback\": \"\", \"payload\":\"\"});\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"getSelectedNodes\", \"status\": \"request\",\n",
@@ -147,13 +133,12 @@
     "      print(\"getSelectedNodes about to start observingThread\")\n",
     "      observingThread.start()\n",
     "      #observingThread.join()\n",
-    "      print(\"getSelectedNodes, observingThread now complete: %s\" %  self.selectedNodes)\n",
+    "      #while(self.incomingMessageArrivedAndParsed == False):\n",
+    "      #   time.sleep(0.5)\n",
+    "      self.status += \"getSelectedNodes, observingThread now complete: %s\\n\" %  self.selectedNodes\n",
+    "      self.status += \"getSelectedNodes, incomingMessageArrivedAndParsed? %s\" % self.incomingMessageArrivedAndParsed\n",
     "      return(self.status)\n",
     "        \n",
-    "    def oldGetSelectedNodes(self):\n",
-    "      self.status += \"entering getSelectedNodes, current content is %s\\n\" % self.selectedNodes\n",
-    "      return(self.selectedNodes)\n",
-    "\n",
     "    def selectNodes(self, nodes):\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"selectNodes\", \"status\": \"request\",\n",
     "                                       \"callback\": \"\", \"payload\": nodes});\n",
@@ -185,12 +170,12 @@
     "            self.circles = []\n",
     "        else:\n",
     "          print(\"unknown cmd: %s\" % msg[\"cmd\"])\n",
-    "        "
+    "        self.incomingMessageArrivedAndParsed = True\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -675,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -687,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -698,9 +683,9 @@
      "text": [
       "getSelectedNodes about to start observingThread\n",
       "thread, no message yet, sleeping, loop 1\n",
-      "getSelectedNodes, observingThread now complete: []\n",
       "entering getSelectedNodes\n",
-      "\n"
+      "getSelectedNodes, observingThread now complete: []\n",
+      "getSelectedNodes, incomingMessageArrivedAndParsed? False\n"
      ]
     }
    ],
@@ -711,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -721,16 +706,17 @@
      "output_type": "stream",
      "text": [
       "entering getSelectedNodes\n",
-      "---- python - msg arrived\n",
+      "getSelectedNodes, observingThread now complete: []\n",
+      "getSelectedNodes, incomingMessageArrivedAndParsed? False---- python - msg arrived\n",
       "len of tmp: 80\n",
       "type of tmp: <class 'str'>\n",
       "{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"LPCAT2\"]}\n",
       "entering dispatch\n",
-      "dispatch this msg: {'status': 'reply', 'payload': ['LPCAT2'], 'cmd': 'storeSelectedNodes', 'callback': ''}\n",
+      "dispatch this msg: {'cmd': 'storeSelectedNodes', 'callback': '', 'payload': ['LPCAT2'], 'status': 'reply'}\n",
       "msg.cmd: storeSelectedNodes\n",
       "storing selected nodes to self.selectedNodes ['LPCAT2']\n",
-      "MyThread ending loop\n",
       "thread owner's selectedNodes: ['LPCAT2']\n",
+      "MyThread ending loop\n",
       "\n"
      ]
     }
