still no solution

--- a/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
+++ b/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -94,6 +94,7 @@
     "                    args=(), kwargs=None, *, daemon=None):\n",
     "          Thread.__init__(self, group, target, name, args, kwargs, daemon=daemon)\n",
     "          self.owner = owner\n",
+    "\n",
     "       def run(self):\n",
     "          maxLoops = 5\n",
     "          counter = 0\n",
@@ -103,6 +104,11 @@
     "             time.sleep(1.0)\n",
     "          self.owner.status += \"thread owner's selectedNodes: %s\\n\" % self.owner.selectedNodes;\n",
     "          self.owner.status += \"MyThread ending loop\\n\";\n",
+    "\n",
+    "       def result(self):\n",
+    "          #while(not self.owner.incomingMessageArrivedAndParsed):\n",
+    "          #   time.sleep(0.1)\n",
+    "          return(\"imaap? %s\" % self.owner.incomingMessageArrivedAndParsed)\n",
     "            \n",
     "    #------------------------------------------------------------------------------\n",
     "\n",
@@ -131,13 +137,15 @@
     "      \n",
     "      observingThread = self.MyThread(name=\"getSelectedNodes-thread\", owner=self)\n",
     "      print(\"getSelectedNodes about to start observingThread\")\n",
-    "      observingThread.start()\n",
+    "      #observingThread.start()\n",
     "      #observingThread.join()\n",
     "      #while(self.incomingMessageArrivedAndParsed == False):\n",
     "      #   time.sleep(0.5)\n",
     "      self.status += \"getSelectedNodes, observingThread now complete: %s\\n\" %  self.selectedNodes\n",
-    "      self.status += \"getSelectedNodes, incomingMessageArrivedAndParsed? %s\" % self.incomingMessageArrivedAndParsed\n",
-    "      return(self.status)\n",
+    "      self.status += \"getSelectedNodes, incomingMessageArrivedAndParsed? %s\\n\" % self.incomingMessageArrivedAndParsed\n",
+    "      observingThread.start()\n",
+    "      return(observingThread.result())\n",
+    "        #return(self.status)\n",
     "        \n",
     "    def selectNodes(self, nodes):\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"selectNodes\", \"status\": \"request\",\n",
@@ -175,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -660,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -672,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -683,9 +691,7 @@
      "text": [
       "getSelectedNodes about to start observingThread\n",
       "thread, no message yet, sleeping, loop 1\n",
-      "entering getSelectedNodes\n",
-      "getSelectedNodes, observingThread now complete: []\n",
-      "getSelectedNodes, incomingMessageArrivedAndParsed? False\n"
+      "imaap? False\n"
      ]
     }
    ],
@@ -696,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -707,12 +713,13 @@
      "text": [
       "entering getSelectedNodes\n",
       "getSelectedNodes, observingThread now complete: []\n",
-      "getSelectedNodes, incomingMessageArrivedAndParsed? False---- python - msg arrived\n",
+      "getSelectedNodes, incomingMessageArrivedAndParsed? False\n",
+      "---- python - msg arrived\n",
       "len of tmp: 80\n",
       "type of tmp: <class 'str'>\n",
       "{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"LPCAT2\"]}\n",
       "entering dispatch\n",
-      "dispatch this msg: {'cmd': 'storeSelectedNodes', 'callback': '', 'payload': ['LPCAT2'], 'status': 'reply'}\n",
+      "dispatch this msg: {'status': 'reply', 'cmd': 'storeSelectedNodes', 'payload': ['LPCAT2'], 'callback': ''}\n",
       "msg.cmd: storeSelectedNodes\n",
       "storing selected nodes to self.selectedNodes ['LPCAT2']\n",
       "thread owner's selectedNodes: ['LPCAT2']\n",
@@ -739,22 +746,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['MAG']"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cy.selectedNodes"
    ]
