still no solution

--- a/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
+++ b/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -141,9 +141,9 @@
     "      #observingThread.join()\n",
     "      #while(self.incomingMessageArrivedAndParsed == False):\n",
     "      #   time.sleep(0.5)\n",
-    "      self.status += \"getSelectedNodes, observingThread now complete: %s\\n\" %  self.selectedNodes\n",
-    "      self.status += \"getSelectedNodes, incomingMessageArrivedAndParsed? %s\\n\" % self.incomingMessageArrivedAndParsed\n",
     "      observingThread.start()\n",
+    "      self.status += \"getSelectedNodes, observingThread now started: %s\\n\" %  self.selectedNodes\n",
+    "      self.status += \"getSelectedNodes, incomingMessageArrivedAndParsed? %s\\n\" % self.incomingMessageArrivedAndParsed\n",
     "      return(observingThread.result())\n",
     "        #return(self.status)\n",
     "        \n",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -712,17 +712,17 @@
      "output_type": "stream",
      "text": [
       "entering getSelectedNodes\n",
-      "getSelectedNodes, observingThread now complete: []\n",
+      "getSelectedNodes, observingThread now started: ['MAG']\n",
       "getSelectedNodes, incomingMessageArrivedAndParsed? False\n",
       "---- python - msg arrived\n",
-      "len of tmp: 80\n",
+      "len of tmp: 90\n",
       "type of tmp: <class 'str'>\n",
-      "{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"LPCAT2\"]}\n",
+      "{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"MAG\",\"PHB\",\"PLD2\"]}\n",
       "entering dispatch\n",
-      "dispatch this msg: {'status': 'reply', 'cmd': 'storeSelectedNodes', 'payload': ['LPCAT2'], 'callback': ''}\n",
+      "dispatch this msg: {'status': 'reply', 'cmd': 'storeSelectedNodes', 'payload': ['MAG', 'PHB', 'PLD2'], 'callback': ''}\n",
       "msg.cmd: storeSelectedNodes\n",
-      "storing selected nodes to self.selectedNodes ['LPCAT2']\n",
-      "thread owner's selectedNodes: ['LPCAT2']\n",
+      "storing selected nodes to self.selectedNodes ['MAG', 'PHB', 'PLD2']\n",
+      "thread owner's selectedNodes: ['MAG', 'PHB', 'PLD2']\n",
       "MyThread ending loop\n",
       "\n"
      ]
