giving up (temporarily?) on single function getSelectedNodes. getResponse() now called after

--- a/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
+++ b/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -167,23 +167,27 @@
     "        self.dispatch(self.msgToKernel)\n",
     " \n",
     "    def dispatch(self, msgRaw):\n",
-    "        msg = json.loads(msgRaw)\n",
+    "        self.msg = json.loads(msgRaw)\n",
     "        self.status += \"entering dispatch\\n\"\n",
-    "        self.status += \"dispatch this msg: %s\\n\" % msg\n",
-    "        self.status += \"msg.cmd: %s\\n\" % msg[\"cmd\"]\n",
-    "        if msg[\"cmd\"] == 'storeSelectedNodes':\n",
+    "        self.status += \"dispatch this msg: %s\\n\" % self.msg\n",
+    "        self.status += \"msg.cmd: %s\\n\" % self.msg[\"cmd\"]\n",
+    "        if self.msg[\"cmd\"] == 'storeSelectedNodes':\n",
     "            self.status += \"storing selected nodes to self.selectedNodes %s\\n\" % msg[\"payload\"]\n",
     "            self.selectedNodes = msg[\"payload\"]\n",
-    "        elif msg[\"cmd\"] == 'clearCircles':\n",
+    "        elif self.msg[\"cmd\"] == 'clearCircles':\n",
     "            self.circles = []\n",
     "        else:\n",
-    "          print(\"unknown cmd: %s\" % msg[\"cmd\"])\n",
-    "        self.incomingMessageArrivedAndParsed = True\n"
+    "          print(\"unknown cmd: %s\" % self.msg[\"cmd\"])\n",
+    "        self.incomingMessageArrivedAndParsed = True\n",
+    "        \n",
+    "    def getResponse(self):\n",
+    "        return(self.msg[\"payload\"])\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -668,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -680,7 +684,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getSelectedNodes about to start observingThread\n",
+      "thread, no message yet, sleeping, loop 1\n",
+      "thread, no message yet, sleeping, loop 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['PLD3', 'STXBP3']"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cy.getSelectedNodes(); time.sleep(1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PLD2', 'chr17:4807191-4807191', 'chr19:40348547-40348547']"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cy.getResponse()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PLD2', 'chr17:4807191-4807191', 'chr19:40348547-40348547']"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cy.getResponse()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -702,7 +781,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PHB', 'PLD3']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.loads(cy.msgToKernel)['payload']\n",
+    "#cy.msgToKernel[\"payload\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -712,18 +814,18 @@
      "output_type": "stream",
      "text": [
       "entering getSelectedNodes\n",
-      "getSelectedNodes, observingThread now started: ['MAG']\n",
+      "getSelectedNodes, observingThread now started: []\n",
       "getSelectedNodes, incomingMessageArrivedAndParsed? False\n",
-      "---- python - msg arrived\n",
-      "len of tmp: 90\n",
-      "type of tmp: <class 'str'>\n",
-      "{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"MAG\",\"PHB\",\"PLD2\"]}\n",
-      "entering dispatch\n",
-      "dispatch this msg: {'status': 'reply', 'cmd': 'storeSelectedNodes', 'payload': ['MAG', 'PHB', 'PLD2'], 'callback': ''}\n",
-      "msg.cmd: storeSelectedNodes\n",
-      "storing selected nodes to self.selectedNodes ['MAG', 'PHB', 'PLD2']\n",
-      "thread owner's selectedNodes: ['MAG', 'PHB', 'PLD2']\n",
+      "thread owner's selectedNodes: []\n",
       "MyThread ending loop\n",
+      "---- python - msg arrived\n",
+      "len of tmp: 77\n",
+      "type of tmp: <class 'str'>\n",
+      "{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"MAG\"]}\n",
+      "entering dispatch\n",
+      "dispatch this msg: {'status': 'reply', 'cmd': 'storeSelectedNodes', 'payload': ['MAG'], 'callback': ''}\n",
+      "msg.cmd: storeSelectedNodes\n",
+      "storing selected nodes to self.selectedNodes ['MAG']\n",
       "\n"
      ]
     }
