explore what messages to pass back and forth, and how

--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -107,6 +107,7 @@
     "        self.status += \"type of tmp: %s\\n\" % type(tmp)\n",
     "        self.msgStringToPython = tmp\n",
     "        self.status += \"%s\\n\" % tmp\n",
+    "        self.msg = json.loads(tmp)\n",
     "        self.dispatch(self.msgStringToPython)\n",
     " \n",
     "    def dispatch(self, msgRaw):\n",
@@ -121,12 +122,15 @@
     "            self.circles = []\n",
     "        else:\n",
     "          print(\"unknown cmd: %s\" % msg[\"cmd\"])\n",
+    "        \n",
+    "    def getResponse(self):\n",
+    "        return(self.msg)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -270,6 +274,7 @@
        "                    console.log(\"edges: \" + network.elements.edges.length);\n",
        "                cyObj.add(network.elements);  // no positions yet\n",
        "                cyObj.nodes().map(function(node){node.data({degree: node.degree()})});\n",
+       "                cyObj.fit(150);\n",
        "                }) // .done\n",
        "            .fail(function(jqxhr, settings, exception) {\n",
        "               console.log(\"addNetwork getscript error trying to read \" + filename);\n",
@@ -507,6 +512,7 @@
     "                    console.log(\"edges: \" + network.elements.edges.length);\n",
     "                cyObj.add(network.elements);  // no positions yet\n",
     "                cyObj.nodes().map(function(node){node.data({degree: node.degree()})});\n",
+    "                cyObj.fit(150);\n",
     "                }) // .done\n",
     "            .fail(function(jqxhr, settings, exception) {\n",
     "               console.log(\"addNetwork getscript error trying to read \" + filename);\n",
@@ -601,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -613,19 +619,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "cy.setSize(800, 600)\n",
-    "cy.fit()"
+    "cy.setSize(1000, 1600)\n",
+    "cy.fit(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -637,6 +643,16 @@
       "initial status message\n",
       "setSize(800, 600)\n",
       "entering fit (50)\n",
+      "setSize(800, 600)\n",
+      "entering fit (100)\n",
+      "setSize(1000, 600)\n",
+      "entering fit (100)\n",
+      "setSize(1000, 600)\n",
+      "entering fit (100)\n",
+      "setSize(1200, 600)\n",
+      "entering fit (100)\n",
+      "setSize(1200, 600)\n",
+      "entering fit (100)\n",
       "\n"
      ]
     }
@@ -647,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -658,7 +674,7 @@
        "['REACTOME_GLYCEROPHOSPHOLIPID_BIOSYNTHESIS']"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,13 +694,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "cy.requestSelectedNodes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'callback': '', 'cmd': 'storeSelectedNodes', 'payload': [], 'status': 'reply'}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cy.msg"
    ]
   },
   {
