--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -81,15 +81,12 @@
     "      self.msgStringFromPython = json.dumps({\"cmd\": \"fit\", \"status\": \"request\",\n",
     "                                              \"callback\": \"\", \"payload\": margin});\n",
     "        \n",
-    "    def requestSelectedNodes(self):\n",
+    "    def getSelectedNodes(self):\n",
     "      #self.selectedNodes = [];\n",
     "      self.status += \"entering requestSelectedNodes\\n\";\n",
+    "      self.msgStringFromPython = json.dumps({\"cmd\": \"cleanSlate\", \"status\": \"request\", \"callback\": \"\", \"payload\":\"\"});\n",
     "      self.msgStringFromPython = json.dumps({\"cmd\": \"getSelectedNodes\", \"status\": \"request\",\n",
     "                                             \"callback\": \"\", \"payload\": \"\"});\n",
-    "    def getSelectedNodes(self):\n",
-    "      self.status += \"entering getSelectedNodes, current content is %s\\n\" % self.selectedNodes\n",
-    "      return(self.selectedNodes)\n",
-    "\n",
     "    def selectNodes(self, nodes):\n",
     "      self.msgStringFromPython = json.dumps({\"cmd\": \"selectNodes\", \"status\": \"request\",\n",
     "                                              \"callback\": \"\", \"payload\": nodes});\n",
@@ -118,8 +115,6 @@
     "        if msg[\"cmd\"] == 'storeSelectedNodes':\n",
     "            self.status += \"storing selected nodes to self.selectedNodes %s\\n\" % msg[\"payload\"]\n",
     "            self.selectedNodes = msg[\"payload\"]\n",
-    "        elif msg[\"cmd\"] == 'clearCircles':\n",
-    "            self.circles = []\n",
     "        else:\n",
     "          print(\"unknown cmd: %s\" % msg[\"cmd\"])\n",
     "        \n",
@@ -130,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -607,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -619,14 +614,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "cy.setSize(1000, 1600)\n",
-    "cy.fit(100)"
+    "# cy.setSize(1000, 1600)\n",
+    "#cy.fit(100)\n",
+    "cy.getSelectedNodes(); "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"LPCAT2\",\"PLD3\",\"chr16:55508991-55508991\",\"chr17:4807191-4807191\",\"chr19:35292055-35292055\",\"chr19:40348525-40348525\",\"chr19:40348547-40348547\"]}'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cy.msgStringToPython"
    ]
   },
   {
