no longer assigning to traitlet dict, which failed silently

--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 152,
    "metadata": {
     "collapsed": false
    },
@@ -67,7 +67,9 @@
     "    frameHeight = Int(300).tag(sync=True)\n",
     "    msgStringFromPython = Unicode(\"{}\").tag(sync=True)\n",
     "    msgStringToPython = Unicode(\"{}\").tag(sync=True)\n",
+    "    rawMessage = None\n",
     "    msg = {};\n",
+    "    inMessage = {};\n",
     "    status = \"initial status message\\n\"\n",
     "    selectedNodes = [];\n",
     "        \n",
@@ -83,7 +85,7 @@
     "        \n",
     "    def getSelectedNodes(self):\n",
     "      #self.selectedNodes = [];\n",
-    "      self.status += \"entering requestSelectedNodes\\n\";\n",
+    "      self.status += \"entering getSelectedNodes\\n\";\n",
     "      self.msgStringFromPython = json.dumps({\"cmd\": \"cleanSlate\", \"status\": \"request\", \"callback\": \"\", \"payload\":\"\"});\n",
     "      self.msgStringFromPython = json.dumps({\"cmd\": \"getSelectedNodes\", \"status\": \"request\",\n",
     "                                             \"callback\": \"\", \"payload\": \"\"});\n",
@@ -99,16 +101,19 @@
     "    @observe('msgStringToPython')\n",
     "    def msg_arrived(self, change):\n",
     "        self.status += \"---- python - msg arrived\\n\"\n",
-    "        tmp = change['new']\n",
-    "        self.status += \"len of tmp: %d\\n\" % len(tmp)\n",
-    "        self.status += \"type of tmp: %s\\n\" % type(tmp)\n",
-    "        self.msgStringToPython = tmp\n",
-    "        self.status += \"%s\\n\" % tmp\n",
-    "        self.msg = json.loads(tmp)\n",
-    "        self.dispatch(self.msgStringToPython)\n",
+    "        self.rawMessage = change['new']\n",
+    "        self.status += \"rawMessage: %s\" % (self.rawMessage)\n",
+    "        self.status += \"len of rawMessage: %d\\n\" % len(self.rawMessage)\n",
+    "        self.status += \"type of rawMessage: %s\\n\" % type(self.rawMessage)\n",
+    "        self.status += \"parsed: %s\" % json.loads(self.rawMessage)\n",
+    "        self.inMessage = json.loads(self.rawMessage)\n",
+    "        self.status += \"type of mstp: %s\\n\" % (type(self.inMessage))\n",
+    "        self.status += \"%s\\n\" % self.rawMessage\n",
+    "        self.msg = self.inMessage\n",
+    "        #self.dispatch(self.msgStringToPython)\n",
     " \n",
-    "    def dispatch(self, msgRaw):\n",
-    "        msg = json.loads(msgRaw)\n",
+    "    def dispatch(self, msg):\n",
+    "        #msg = json.loads(msgRaw)\n",
     "        self.status += \"entering dispatch\\n\"\n",
     "        self.status += \"dispatch this msg: %s\\n\" % msg\n",
     "        self.status += \"msg.cmd: %s\\n\" % msg[\"cmd\"]\n",
@@ -119,13 +124,16 @@
     "          print(\"unknown cmd: %s\" % msg[\"cmd\"])\n",
     "        \n",
     "    def getResponse(self):\n",
-    "        return(self.msg)\n",
+    "        return(self.inMessage[\"payload\"])\n",
+    "\n",
+    "    def getFullResponse(self):\n",
+    "        return(self.inMessage)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 153,
    "metadata": {
     "collapsed": false
    },
@@ -602,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 154,
    "metadata": {
     "collapsed": false
    },
@@ -614,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 155,
    "metadata": {
     "collapsed": false
    },
@@ -627,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 156,
    "metadata": {
     "collapsed": false
    },
@@ -635,21 +643,22 @@
     {
      "data": {
       "text/plain": [
-       "'{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"LPCAT2\",\"PLD3\",\"chr16:55508991-55508991\",\"chr17:4807191-4807191\",\"chr19:35292055-35292055\",\"chr19:40348525-40348525\",\"chr19:40348547-40348547\"]}'"
+       "'{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"LPCAT2\",\"PLD2\",\"PLD3\"]}'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# json.loads(cy.getResponse())\n",
     "cy.msgStringToPython"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 157,
    "metadata": {
     "collapsed": false
    },
@@ -659,18 +668,12 @@
      "output_type": "stream",
      "text": [
       "initial status message\n",
-      "setSize(800, 600)\n",
-      "entering fit (50)\n",
-      "setSize(800, 600)\n",
-      "entering fit (100)\n",
-      "setSize(1000, 600)\n",
-      "entering fit (100)\n",
-      "setSize(1000, 600)\n",
-      "entering fit (100)\n",
-      "setSize(1200, 600)\n",
-      "entering fit (100)\n",
-      "setSize(1200, 600)\n",
-      "entering fit (100)\n",
+      "entering getSelectedNodes\n",
+      "---- python - msg arrived\n",
+      "rawMessage: {\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"LPCAT2\",\"PLD2\",\"PLD3\"]}len of rawMessage: 94\n",
+      "type of rawMessage: <class 'str'>\n",
+      "parsed: {'cmd': 'storeSelectedNodes', 'status': 'reply', 'callback': '', 'payload': ['LPCAT2', 'PLD2', 'PLD3']}type of mstp: <class 'dict'>\n",
+      "{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"LPCAT2\",\"PLD2\",\"PLD3\"]}\n",
       "\n"
      ]
     }
@@ -681,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 158,
    "metadata": {
     "collapsed": false
    },
@@ -689,16 +692,60 @@
     {
      "data": {
       "text/plain": [
-       "['REACTOME_GLYCEROPHOSPHOLIPID_BIOSYNTHESIS']"
+       "['LPCAT2', 'PLD2', 'PLD3']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cy.selectedNodes"
+    "cy.inMessage[\"payload\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['LPCAT2', 'PLD2', 'PLD3']"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.loads(cy.rawMessage)[\"payload\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['LPCAT2', 'PLD2', 'PLD3']"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cy.getResponse()"
    ]
   },
   {
