--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 168,
    "metadata": {
     "collapsed": false
    },
@@ -65,8 +65,8 @@
     "    _view_module = Unicode('cyjs').tag(sync=True)\n",
     "    frameWidth = Int(400).tag(sync=True)\n",
     "    frameHeight = Int(300).tag(sync=True)\n",
-    "    msgStringFromPython = Unicode(\"{}\").tag(sync=True)\n",
-    "    msgStringToPython = Unicode(\"{}\").tag(sync=True)\n",
+    "    msgStringFromKernel = Unicode(\"{}\").tag(sync=True)\n",
+    "    msgStringFromBrowser = Unicode(\"{}\").tag(sync=True)\n",
     "    rawMessage = None\n",
     "    msg = {};\n",
     "    inMessage = {};\n",
@@ -80,25 +80,25 @@
     "        \n",
     "    def fit(self, margin=50):\n",
     "      self.status += \"entering fit (%d)\\n\" % margin\n",
-    "      self.msgStringFromPython = json.dumps({\"cmd\": \"fit\", \"status\": \"request\",\n",
+    "      self.msgStringFromKernel = json.dumps({\"cmd\": \"fit\", \"status\": \"request\",\n",
     "                                              \"callback\": \"\", \"payload\": margin});\n",
     "        \n",
     "    def getSelectedNodes(self):\n",
     "      #self.selectedNodes = [];\n",
     "      self.status += \"entering getSelectedNodes\\n\";\n",
-    "      self.msgStringFromPython = json.dumps({\"cmd\": \"cleanSlate\", \"status\": \"request\", \"callback\": \"\", \"payload\":\"\"});\n",
-    "      self.msgStringFromPython = json.dumps({\"cmd\": \"getSelectedNodes\", \"status\": \"request\",\n",
+    "      self.msgStringFromKernel = json.dumps({\"cmd\": \"cleanSlate\", \"status\": \"request\", \"callback\": \"\", \"payload\":\"\"});\n",
+    "      self.msgStringFromKernel = json.dumps({\"cmd\": \"getSelectedNodes\", \"status\": \"request\",\n",
     "                                             \"callback\": \"\", \"payload\": \"\"});\n",
     "    def selectNodes(self, nodes):\n",
-    "      self.msgStringFromPython = json.dumps({\"cmd\": \"selectNodes\", \"status\": \"request\",\n",
+    "      self.msgStringFromKernel = json.dumps({\"cmd\": \"selectNodes\", \"status\": \"request\",\n",
     "                                              \"callback\": \"\", \"payload\": nodes});\n",
     "       \n",
     "    def clearSelection(self):\n",
-    "      self. msgStringFromPython = json.dumps({\"cmd\": \"clearSelection\", \"status\": \"request\",\n",
+    "      self. msgStringFromKernel = json.dumps({\"cmd\": \"clearSelection\", \"status\": \"request\",\n",
     "                                              \"callback\": \"\", \"payload\": \"\"});\n",
     "\n",
     "        \n",
-    "    @observe('msgStringToPython')\n",
+    "    @observe('msgStringFromBrowser')\n",
     "    def msg_arrived(self, change):\n",
     "        self.status += \"---- python - msg arrived\\n\"\n",
     "        self.rawMessage = change['new']\n",
@@ -110,19 +110,7 @@
     "        self.status += \"type of mstp: %s\\n\" % (type(self.inMessage))\n",
     "        self.status += \"%s\\n\" % self.rawMessage\n",
     "        self.msg = self.inMessage\n",
-    "        #self.dispatch(self.msgStringToPython)\n",
-    " \n",
-    "    def dispatch(self, msg):\n",
-    "        #msg = json.loads(msgRaw)\n",
-    "        self.status += \"entering dispatch\\n\"\n",
-    "        self.status += \"dispatch this msg: %s\\n\" % msg\n",
-    "        self.status += \"msg.cmd: %s\\n\" % msg[\"cmd\"]\n",
-    "        if msg[\"cmd\"] == 'storeSelectedNodes':\n",
-    "            self.status += \"storing selected nodes to self.selectedNodes %s\\n\" % msg[\"payload\"]\n",
-    "            self.selectedNodes = msg[\"payload\"]\n",
-    "        else:\n",
-    "          print(\"unknown cmd: %s\" % msg[\"cmd\"])\n",
-    "        \n",
+    "         \n",
     "    def getResponse(self):\n",
     "        return(self.inMessage[\"payload\"])\n",
     "\n",
@@ -133,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 169,
    "metadata": {
     "collapsed": false
    },
@@ -154,7 +142,7 @@
        "           this.circleCount = 0;\n",
        "           this.options = {}; \n",
        "           this.msg = \"empty in javascript\";\n",
-       "           this.msgStringFromPython = \"\";\n",
+       "           this.msgStringFromKernel = \"\";\n",
        "           this.defaultHeight = \"800px\";\n",
        "           this.defaultWidth = \"1000px\";\n",
        "           },\n",
@@ -289,7 +277,7 @@
        "            this.$el.append(this.createDiv());\n",
        "            this.listenTo(this.model, 'change:frameWidth', this.frameDimensionsChanged, this);\n",
        "            this.listenTo(this.model, 'change:frameHeight', this.frameDimensionsChanged, this);\n",
-       "            this.listenTo(this.model, 'change:msgStringFromPython', this.dispatchRequest, this);\n",
+       "            this.listenTo(this.model, 'change:msgStringFromKernel', this.dispatchRequest, this);\n",
        "            var cyjsWidget = this;\n",
        "            function myFunc(){\n",
        "               cyjsWidget.createCanvas()\n",
@@ -299,7 +287,7 @@
        "\n",
        "        dispatchRequest: function(){\n",
        "           console.log(\"dispatchRequest\");\n",
-       "           var msgRaw = this.model.get(\"msgStringFromPython\");\n",
+       "           var msgRaw = this.model.get(\"msgStringFromKernel\");\n",
        "           var msg = JSON.parse(msgRaw);\n",
        "           console.log(msg);\n",
        "           console.log(\"========================\");\n",
@@ -321,8 +309,8 @@
        "                                                payload: selectedNodes})\n",
        "                  console.log(\" *** jsonString: \")\n",
        "                  console.log(jsonString);\n",
-       "                  this.model.set(\"msgStringToPython\", jsonString);\n",
-       "                  console.log(\"    after setting 'msgStringToPython\");\n",
+       "                  this.model.set(\"msgStringFromBrowser\", jsonString);\n",
+       "                  console.log(\"    after setting 'msgStringFromBrowser\");\n",
        "                  this.touch();\n",
        "                  break;\n",
        "               case 'selectNodes':\n",
@@ -392,7 +380,7 @@
     "           this.circleCount = 0;\n",
     "           this.options = {}; \n",
     "           this.msg = \"empty in javascript\";\n",
-    "           this.msgStringFromPython = \"\";\n",
+    "           this.msgStringFromKernel = \"\";\n",
     "           this.defaultHeight = \"800px\";\n",
     "           this.defaultWidth = \"1000px\";\n",
     "           },\n",
@@ -527,7 +515,7 @@
     "            this.$el.append(this.createDiv());\n",
     "            this.listenTo(this.model, 'change:frameWidth', this.frameDimensionsChanged, this);\n",
     "            this.listenTo(this.model, 'change:frameHeight', this.frameDimensionsChanged, this);\n",
-    "            this.listenTo(this.model, 'change:msgStringFromPython', this.dispatchRequest, this);\n",
+    "            this.listenTo(this.model, 'change:msgStringFromKernel', this.dispatchRequest, this);\n",
     "            var cyjsWidget = this;\n",
     "            function myFunc(){\n",
     "               cyjsWidget.createCanvas()\n",
@@ -537,7 +525,7 @@
     "\n",
     "        dispatchRequest: function(){\n",
     "           console.log(\"dispatchRequest\");\n",
-    "           var msgRaw = this.model.get(\"msgStringFromPython\");\n",
+    "           var msgRaw = this.model.get(\"msgStringFromKernel\");\n",
     "           var msg = JSON.parse(msgRaw);\n",
     "           console.log(msg);\n",
     "           console.log(\"========================\");\n",
@@ -559,8 +547,8 @@
     "                                                payload: selectedNodes})\n",
     "                  console.log(\" *** jsonString: \")\n",
     "                  console.log(jsonString);\n",
-    "                  this.model.set(\"msgStringToPython\", jsonString);\n",
-    "                  console.log(\"    after setting 'msgStringToPython\");\n",
+    "                  this.model.set(\"msgStringFromBrowser\", jsonString);\n",
+    "                  console.log(\"    after setting 'msgStringFromBrowser\");\n",
     "                  this.touch();\n",
     "                  break;\n",
     "               case 'selectNodes':\n",
@@ -610,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 170,
    "metadata": {
     "collapsed": false
    },
@@ -622,20 +610,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 179,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# cy.setSize(1000, 1600)\n",
-    "#cy.fit(100)\n",
     "cy.getSelectedNodes(); "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 180,
    "metadata": {
     "collapsed": false
    },
@@ -643,103 +629,10 @@
     {
      "data": {
       "text/plain": [
-       "'{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"LPCAT2\",\"PLD2\",\"PLD3\"]}'"
+       "['LPCAT2', 'chr1:108746614-108746614']"
       ]
      },
-     "execution_count": 156,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# json.loads(cy.getResponse())\n",
-    "cy.msgStringToPython"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "initial status message\n",
-      "entering getSelectedNodes\n",
-      "---- python - msg arrived\n",
-      "rawMessage: {\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"LPCAT2\",\"PLD2\",\"PLD3\"]}len of rawMessage: 94\n",
-      "type of rawMessage: <class 'str'>\n",
-      "parsed: {'cmd': 'storeSelectedNodes', 'status': 'reply', 'callback': '', 'payload': ['LPCAT2', 'PLD2', 'PLD3']}type of mstp: <class 'dict'>\n",
-      "{\"cmd\":\"storeSelectedNodes\",\"status\":\"reply\",\"callback\":\"\",\"payload\":[\"LPCAT2\",\"PLD2\",\"PLD3\"]}\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(cy.status)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['LPCAT2', 'PLD2', 'PLD3']"
-      ]
-     },
-     "execution_count": 158,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cy.inMessage[\"payload\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['LPCAT2', 'PLD2', 'PLD3']"
-      ]
-     },
-     "execution_count": 159,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "json.loads(cy.rawMessage)[\"payload\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['LPCAT2', 'PLD2', 'PLD3']"
-      ]
-     },
-     "execution_count": 160,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,28 +642,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "#### Select a SNP in the network view, parse it into a chromosomal location (+/- shoulders), get sequence, run FIMO"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "cy.requestSelectedNodes()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 176,
    "metadata": {
     "collapsed": false
    },
@@ -778,36 +651,19 @@
     {
      "data": {
       "text/plain": [
-       "{'callback': '', 'cmd': 'storeSelectedNodes', 'payload': [], 'status': 'reply'}"
+       "{'callback': '',\n",
+       " 'cmd': 'storeSelectedNodes',\n",
+       " 'payload': ['PHB', 'SEC23B', 'STXBP3'],\n",
+       " 'status': 'reply'}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cy.msg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PLD3\n"
-     ]
-    }
-   ],
-   "source": [
-    "node = cy.getSelectedNodes()[0]\n",
-    "print(node)"
+    "cy.getFullResponse()"
    ]
   }
  ],
